<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <!-- Adding Progress Bar   -->
    <ProgressBar
        android:id="@+id/create_act__progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"/>

    <LinearLayout
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <AutoCompleteTextView
            android:id="@+id/email_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/password_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:background="@android:color/transparent"
            android:textColor="@color/purple"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/or_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/back_tologin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:background="@android:color/transparent"
            android:textColor="@color/purple"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>